samples/_failures_safe/1761002650_4f3a9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01f34ec2.c: In function ‘main’:
./samples/SAFE/__tmp_01f34ec2.c:148:5: error: expected expression at end of input
  148 |     if (choice < 0 ||
      |     ^~
./samples/SAFE/__tmp_01f34ec2.c:148:5: error: expected declaration or statement at end of input
